--- a/foundations/02-class-id-selectors ***/index.html
+++ b/foundations/02-class-id-selectors ***/index.html
@@ -10,6 +10,7 @@
 <body>
   <p class="odd">Number 1 - I'm a class!</p>
   <div id="two">Number 2 - I'm one ID.</div>
+  <!--its okay to use multiple classes-->
   <p class="odd cooler">Number 3 - I'm a class, but cooler!</p>
   <div id="four" class="cooler">Number 4 - I'm another ID.</div>
   <p class="odd">Number 5 - I'm a class!</p>
