complete act IV chaining selector

--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
   <button class="blue-pilled">Click Me!</button>
-  <button class="red-pilled">No, Click Me!</button>
+  <button id="blacked"class="red-pilled">No, Click Me!</button>
 </body>
 </html>
